--- a/orderservice/pom.xml
+++ b/orderservice/pom.xml
@@ -41,7 +41,10 @@
 			<artifactId>h2</artifactId>
 			<scope>runtime</scope>
 		</dependency>
-
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+		</dependency>
 		<!-- OpenFeign for inter-service calls -->
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
